# botc-scripts

./: .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TESTING_DELETE_ALL_VERSIONS.md  docker-compose.yml  docker.env.example  manage.py  pyproject.toml  test_manual.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  claim-script.md  feature_request.md
.github/workflows/: linter.yml  main_botc-scripts.yml  pytest.yml  staging_botc-scripts(staging).yml  staging_botc-scripts-staging.yml  staging_botc-scripts.yml
bot/: PRIVACY.md  README.md  TERMS.md  devvit.json  package-lock.json  package.json  tsconfig.json
bot/src/: main.ts
botc/: asgi.py  loaders.py  production.py  settings.py  storage.py  urls.py  wsgi.py
dev/: Dockerfile  characters.json  docker-compose.yml
homebrew/: apps.py  filters.py  forms.py  models.py  serializers.py  tables.py  urls.py  views.py  viewsets.py
homebrew/migrations/: 0001_initial.py
scripts/: admin.py  api_views.py  api_views_enhanced.py  cache.py  characters.py  constants.py  context_processors.py  filters.py  forms.py  managers.py  models.py  queries.py  script_json.py  serializers.py  tables.py  urls.py  validators.py  validators_enhanced.py  views.py  viewsets.py  widgets.py  worldcup.py
scripts/fixtures/: characters.json
scripts/management/: __init__.py
scripts/migrations/: 0001_initial.py  0002_alter_scriptversion_tags.py  0003_scriptversion_notes.py  0004_scripttag_public.py  0005_auto_20211221_0205.py  0006_alter_vote_user.py  0007_script_owner.py  0008_alter_script_owner.py  0009_scripttag_style.py  0010_worldcup.py  0011_favourite.py  0012_auto_20220504_2315.py  0012_auto_20220517_2001.py  0012_auto_20220519_2214.py  0012_auto_20220523_2251.py  0013_worldcup_winner.py  0014_comment_parent.py  0015_auto_20220612_1903.py  0015_auto_20220615_2315.py  0015_auto_20220616_2142.py  0016_alter_translation_options.py  0016_auto_20220709_1510.py  0017_alter_scripttag_style.py  0018_auto_20230316_2218.py  0019_scripttag_order.py  0020_auto_20230319_2242.py  0021_auto_20230323_2228.py  0022_alter_scriptversion_options.py  0023_scripttag_inheritable.py  0024_alter_scriptversion_created.py  0025_alter_scripttag_name.py  0026_alter_scripttag_style.py  0027_remove_special_characters_from_character_ids.py  0028_alter_character_first_night_position_and_more.py  0028_clocktowercharacter_delete_character_and_more.py  0029_homebrewcharacter_scriptversion_homebrewiness_and_more.py  0030_alter_clocktowercharacter_global_reminders_and_more.py  0031_alter_clocktowercharacter_character_id_and_more.py  0032_remove_clocktowercharacter_id_and_more.py  0033_homebrewcharacter_script.py  (+14 more)
scripts/services/: __init__.py  character_service.py  script_service.py  statistics_service.py
scripts/templates/: add_to_collection.html  advanced_search.html  all_roles.html  base.html  chart.html  collection.html  collection_list.html  delete_comment.html  delete_script.html  download_json.html  download_pdf.html  favourite.html  index.html  info.html  login.html  missing_characters.html  navbar.html  remove_collection.html  robots.txt  script.html  scriptlist.html  statistics.html  table.html  tags.html  update_database.html  upload.html  vote.html  worldcup.html  worldcuprow.html  worldcuptable.html
scripts/templatetags/: botc_script_tags.py
scripts/views/: __init__.py  collection_views.py  comment_views.py  list_views.py  script_views.py  (+3 more)
tests/: settings.py  test_additions.py  test_changes.py  test_delete_all_versions.py  test_format_updates.py  test_services.py  test_similarity.py  test_validators.py  test_views.py
(+42 files in other folders)
