[tool.poetry]
name = "botc-scripts"
version = "0.1.0"
description = ""
authors = ["Geoff Thomas"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
django-versionfield = "^1.0.2"
packaging = "^24.1"
django-tables2 = "^2.4.1"
django-bootstrap4 = "^24.1"
django-filter = "^24.2"
djangorestframework = "^3.12.2"
psycopg2-binary = "^2.9.9"
django-storages = {version = "^1.11.1", extras = ["azure"]}
django-allauth = {extras = ["socialaccount"], version = "^65.0.0"}
django-bootstrap-icons = "^0.9.0"
Babel = "^2.13.1"
django-markdownify = "^0.9.2"
requests = "^2.31.0"
django-cors-headers = "^4.3.0"
jsonschema = "^4.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
isort = "*"
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["scripts/migrations","botc/", "manage.py"]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"