[project]
name = "botc-scripts"
version = "0.1.0"
description = ""
authors = [{ name = "Geoff Thomas" }]
requires-python = "<4.0,>=3.10"
license = { text = "MIT" }
dependencies = [
    "Django<6.0,>=5.1",
    "django-versionfield<2.0.0,>=1.0.2",
    "packaging<25.0,>=24.2",
    "django-tables2<3.0.0,>=2.4.1",
    "django-bootstrap4<25.0,>=24.1",
    "django-filter<25.0,>=24.2",
    "djangorestframework<4.0.0,>=3.12.2",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "django-storages[azure]<2.0.0,>=1.11.1",
    "django-allauth[socialaccount]<66.0.0,>=65.2.0",
    "django-bootstrap-icons<1.0.0,>=0.9.0",
    "Babel<3.0.0,>=2.13.1",
    "django-markdownify<1.0.0,>=0.9.2",
    "requests<3.0.0,>=2.31.0",
    "django-cors-headers<5.0.0,>=4.3.0",
    "jsonschema<5.0.0,>=4.23.0",
    "bleach>=6.2.0",
    "drf-spectacular>=0.28.0",
]
requires-plugins = { poetry-plugin-export = ">=1.8" }
package-mode = false

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "pytest-django>=4.9.0,<5",
    "pytest-cov>=6.0.0,<7",
    "isort",
    "mypy",
    "ruff",
]

[tool.uv]
package = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.3.2",
    "pytest-django<5.0.0,>=4.9.0",
    "pytest-cov<7.0.0,>=6.0.0",
    "isort",
    "mypy",
    "ruff",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
exclude = ["scripts/migrations","botc/", "manage.py"]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
